--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="368dp"
         android:layout_height="368dp"
         android:layout_marginStart="1dp"
@@ -38,10 +39,10 @@
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
-            app:layout_column="1"
-            app:layout_row="0"
+            android:onClick="dropIn"
             android:tag="1"
-            android:onClick="dropIn" />
+            app:layout_column="1"
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -49,10 +50,10 @@
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
-            app:layout_column="2"
-            app:layout_row="0"
+            android:onClick="dropIn"
             android:tag="2"
-            android:onClick="dropIn" />
+            app:layout_column="2"
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/imageView4"
@@ -61,10 +62,10 @@
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="15dp"
-            app:layout_column="0"
-            app:layout_row="1"
+            android:onClick="dropIn"
             android:tag="3"
-            android:onClick="dropIn" />
+            app:layout_column="0"
+            app:layout_row="1" />
 
         <ImageView
             android:id="@+id/imageView5"
@@ -73,10 +74,10 @@
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="15dp"
-            app:layout_column="1"
-            app:layout_row="1"
+            android:onClick="dropIn"
             android:tag="4"
-            android:onClick="dropIn" />
+            app:layout_column="1"
+            app:layout_row="1" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -85,10 +86,10 @@
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="15dp"
-            app:layout_column="2"
-            app:layout_row="1"
+            android:onClick="dropIn"
             android:tag="5"
-            android:onClick="dropIn" />
+            app:layout_column="2"
+            app:layout_row="1" />
 
         <ImageView
             android:id="@+id/imageView7"
@@ -97,10 +98,10 @@
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="12dp"
-            app:layout_column="0"
-            app:layout_row="2"
+            android:onClick="dropIn"
             android:tag="6"
-            android:onClick="dropIn" />
+            app:layout_column="0"
+            app:layout_row="2" />
 
         <ImageView
             android:id="@+id/imageView8"
@@ -109,10 +110,10 @@
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="12dp"
-            app:layout_column="1"
-            app:layout_row="2"
+            android:onClick="dropIn"
             android:tag="7"
-            android:onClick="dropIn" />
+            app:layout_column="1"
+            app:layout_row="2" />
 
         <ImageView
             android:id="@+id/imageView9"
@@ -121,9 +122,48 @@
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="12dp"
-            app:layout_column="2"
-            app:layout_row="2"
+            android:onClick="dropIn"
             android:tag="8"
-            android:onClick="dropIn" />
+            app:layout_column="2"
+            app:layout_row="2" />
     </androidx.gridlayout.widget.GridLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="169dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="159dp"
+        android:layout_marginBottom="112dp"
+        android:alpha="1"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="invisible" />
+
+    <Button
+        android:id="@+id/playAgainButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="159dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="164dp"
+        android:layout_marginBottom="28dp"
+        android:alpha="1"
+        android:onClick="playAgain"
+        android:text="Play Again"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:visibility="invisible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
